mule-user-guide/v/3.7/pop3-transport-reference.adoc
=  POP3传输参考
:keywords: email, transport, pop3, connector

POP3传输可用于接收来自POP3收件箱的邮件。 POP3S传输使用`javax.mail` API连接到POP3邮箱。

[WARNING]
====
*Warning*

如果Geronimo邮件位于CLASSSPATH中，POP3轮询可能会失败。有关此问题的信息，请咨询 link:http://www.mulesoft.org/jira/browse/MULE-4875[MULE-4875]。
====

TLS / SSL连接代表实体进行，实体可以是匿名的或由证书标识。密钥库提供识别建立连接的实体所需的证书和相关私钥。此外，连接到可信系统。受信任系统的公共证书存储在信任库中，该信任库用于验证与远程系统建立的连接是否与期望的身份匹配。

== 传输信息

[%header,cols="20a,30a,50a"]
|===
|功能 |值 |说明
|传输 | POP3和POP3S  |传输的名称/协议
|文档 | http://www.mulesoft.org/docs/site/3.7.0/apidocs/org/mule/transport/email/package-summary.html[POP3和POP3S JavaDoc]，
  link:http://www.mulesoft.org/docs/site/current3/schemadocs/namespaces/http_www_mulesoft_org_schema_mule_pop3/namespace-overview.html[POP3 SchemaDoc]， link:http://www.mulesoft.org/docs/site/current3/schemadocs/namespaces/http_www_mulesoft_org_schema_mule_pop3s/namespace-overview.html[POP3S Schemadoc]
|指向传输的JavaDoc和SchemaDoc的链接
|入站 | image:check.png[查]  |传输是否可以接收入站事件并可用于入站端点。
|出站 | image:error.png[错误]  |传输是否可以生成出站事件并与出站端点一起使用。
|请求 | image:check.png[查]  |是否可以通过请求调用直接查询此端点（通过MuleClient或EventContext）
|交易 | image:error.png[错误]  |交易是否受交通支持。支持事务的传输可以在本地或分布式两阶段提交（XA）事务中进行配置。
|流式传输 | image:error.png[错误]  |此传输是否可以处理输入流中传入的消息。这可以非常有效地处理大数据。有关更多信息，请参阅流式传输。
|重试 | image:error.png[错误]  |此传输是否支持重试策略。请注意，所有传输都可以配置Retry策略，但只有这里标记的传输才是MuleSoft官方支持的。
| MEP  |单向 |此传输所支持的消息交换模式。
|默认MEP  |单向 |使用此传输的端点的默认MEP不显式配置MEP。
| Maven Artifact  | org.mule.transport：mule-transport-pop3 |组在 link:http://maven.apache.org/[Maven的]中为此传输命名一个工件名称
|===

== 命名空间和语法

XML名称空间：

[source, xml, linenums]
----
xmlns:pop3 "http://www.mulesoft.org/schema/mule/pop3"
xmlns:pop3s "http://www.mulesoft.org/schema/mule/pop3s"
----

XML架构位置：

[source, code, linenums]
----
http://www.mulesoft.org/schema/mule/pop3 http://www.mulesoft.org/schema/mule/pop3/current/mule-pop3.xsd
http://www.mulesoft.org/schema/mule/pop3s http://www.mulesoft.org/schema/mule/pop3s/current/mule-pop3s.xsd
----

连接器语法：

[source, xml, linenums]
----
<pop3:connector name="pop3Connector" backupEnabled="true" backupFolder="backup" checkFrequency="90000"
                deleteReadMessages="false" mailboxFolder="INBOX" moveToFolder="PROCESSED"/>
<pop3s:connector name="pop3sConnector" backupEnabled="true" backupFolder="backup" checkFrequency="90000"
                 deleteReadMessages="false" mailboxFolder="INBOX" moveToFolder="PROCESSED"/>
  <pop3s:tls-client path="clientKeystore" storePassword="mulepassword" />
  <pop3s:tls-trust-store path="greenmail-truststore" storePassword="password" />
</pop3s:connector>
----

端点语法：

你可以用两种不同的方式定义你的端点：

. 前缀端点：
+
[source, xml, linenums]
----
<pop3:inbound-endpoint user="bob" password="password" host="localhost" port="65433"/>
<pop3s:inbound-endpoint user="bob" password="password" host="localhost" port="65433"/>
----

. 没有前缀的URI：
+
[source, xml, linenums]
----
<inbound-endpoint address="pop3://bob:password@localhost:65433"/>
<inbound-endpoint address="pop3s://bob:password@localhost:65433"/>
----

有关更多信息，请参阅下面的部分。

== 特点

* 简单配置入站端点的电子邮件访问：包括验证信息和检查频率。
* 自动处理电子邮件附件。
* 将邮件自动备份到指定的文件夹。
* 自动删除读取的消息。
* 轻松配置TLS安全性。

== 用法

如果您想在您的配置中包含POP3电子邮件传输，这些是您需要定义的命名空间：

[source, xml, linenums]
----
<?xml version="1.0" encoding="UTF-8"?>
<mule xmlns="http://www.mulesoft.org/schema/mule/core"
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       xmlns:spring="http://www.springframework.org/schema/beans"
       xmlns:pop3="http://www.mulesoft.org/schema/mule/pop3"
       xsi:schemaLocation="
       http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans-current.xsd
       http://www.mulesoft.org/schema/mule/core http://www.mulesoft.org/schema/mule/core/current/mule.xsd
       http://www.mulesoft.org/schema/mule/pop3 http://www.mulesoft.org/schema/mule/pop3/current/mule-pop3.xsd">
...
----

对于安全版本，您可以使用以下内容：

[source, xml, linenums]
----
<?xml version="1.0" encoding="UTF-8"?>
<mule xmlns="http://www.mulesoft.org/schema/mule/core"
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       xmlns:spring="http://www.springframework.org/schema/beans"
       xmlns:pop3s="http://www.mulesoft.org/schema/mule/pop3s"
       xsi:schemaLocation="
       http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans-current.xsd
       http://www.mulesoft.org/schema/mule/core http://www.mulesoft.org/schema/mule/core/current/mule.xsd
       http://www.mulesoft.org/schema/mule/pop3s http://www.mulesoft.org/schema/mule/pop3s/current/mule-pop3s.xsd">
----

然后您需要按照以下所述配置连接器和端点。

=== 配置示例

假设你有一个企业，并想通过电子邮件附件接受订单。收到电子邮件后，您需要保存订单附件，以便在您的订单履行流程中收到附件。这是基于流的版本：

[source, xml, linenums]
----
<?xml version="1.0" encoding="UTF-8"?>
<mule xmlns="http://www.mulesoft.org/schema/mule/core"
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       xmlns:spring="http://www.springframework.org/schema/beans"
       xmlns:pop3="http://www.mulesoft.org/schema/mule/pop3"
       xmlns:vm="http://www.mulesoft.org/schema/mule/vm"
       xmlns:file="http://www.mulesoft.org/schema/mule/file"
       xmlns:email="http://www.mulesoft.org/schema/mule/email"
       xsi:schemaLocation="
       http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans-current.xsd
       http://www.mulesoft.org/schema/mule/core http://www.mulesoft.org/schema/mule/core/current/mule.xsd
       http://www.mulesoft.org/schema/mule/file http://www.mulesoft.org/schema/mule/file/current/mule-file.xsd
       http://www.mulesoft.org/schema/mule/pop3 http://www.mulesoft.org/schema/mule/pop3/current/mule-pop3.xsd
       http://www.mulesoft.org/schema/mule/email http://www.mulesoft.org/schema/mule/email/current/mule-email.xsd
       http://www.mulesoft.org/schema/mule/vm http://www.mulesoft.org/schema/mule/vm/current/mule-vm.xsd">
 
    <pop3:connector name="pop3Connector"  />
 
    <expression-transformer name="returnAttachments">
        <return-argument evaluator="attachments-list" expression="*" optional="false"/>  ❶
    </expression-transformer>
 
    <file:connector name="fileName">
        <file:expression-filename-parser/>
    </file:connector>
     
    <flow name="incoming-orders">
        <pop3:inbound-endpoint user="bob" password="password" host="mailServer" port="110" transformer-refs="returnAttachments"/> ❷
        <collection-splitter/> ❸
        <file:outbound-endpoint path="./received" outputPattern="#[function:datestamp].dat"> ❹
            <expression-transformer>
                <return-argument expression="payload.inputStream" evaluator="groovy" /> ❺
            </expression-transformer>
        </file:outbound-endpoint>                   
    </flow>
</mule>
----

内置变压器在declared声明并获取电子邮件附件列表。然后将这个转换器应用于在defined定义的pop3入站端点。然后我们在❸上定义一个列表列表 - 消息分离器 - 路由器，它遍历所有的电子邮件附件。接下来我们定义一个文件出站端点，该端点将附件写入'./received'目录，并在文件名上加上日期戳。 ❺定义一个简单的groovy表达式，它获取附件的inputStream来写入文件。

这里是安全版本：

[source, xml, linenums]
----
<?xml version="1.0" encoding="UTF-8"?>
<mule xmlns="http://www.mulesoft.org/schema/mule/core"
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       xmlns:spring="http://www.springframework.org/schema/beans"
       xmlns:pop3="http://www.mulesoft.org/schema/mule/pop3"
       xmlns:vm="http://www.mulesoft.org/schema/mule/vm"
       xmlns:file="http://www.mulesoft.org/schema/mule/file"
       xmlns:email="http://www.mulesoft.org/schema/mule/email"
       xsi:schemaLocation="
       http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans-current.xsd
       http://www.mulesoft.org/schema/mule/core http://www.mulesoft.org/schema/mule/core/current/mule.xsd
       http://www.mulesoft.org/schema/mule/file http://www.mulesoft.org/schema/mule/file/current/mule-file.xsd
       http://www.mulesoft.org/schema/mule/pop3 http://www.mulesoft.org/schema/mule/pop3/current/mule-pop3.xsd
       http://www.mulesoft.org/schema/mule/email http://www.mulesoft.org/schema/mule/email/current/mule-email.xsd
       http://www.mulesoft.org/schema/mule/vm http://www.mulesoft.org/schema/mule/vm/current/mule-vm.xsd">
 
    <pop3:connector name="pop3Connector"  />
 
<pop3s:connector name="POP3" validateConnections="true" doc:name="POP3">
        <pop3s:tls-client path="clientKeystore" storePassword="mulepassword"/>
        <pop3s:tls-trust-store path="greenmail-truststore" storePassword="password"/>
    </pop3s:connector>
 
    <expression-transformer name="returnAttachments">
        <return-argument evaluator="attachments-list" expression="*" optional="false"/>  ❶
    </expression-transformer>
 
    <file:connector name="fileName">
        <file:expression-filename-parser/>
    </file:connector>
     
    <flow name="incoming-orders">
        <pop3:inbound-endpoint user="bob" password="password" host="mailServer" port="110" transformer-refs="returnAttachments"
           connector-ref="POP3"/> ❷
        <collection-splitter/> ❸
        <file:outbound-endpoint path="./received" outputPattern="#[function:datestamp].dat"> ❹
            <expression-transformer>
                <return-argument expression="payload.inputStream" evaluator="groovy" /> ❺
            </expression-transformer>
        </file:outbound-endpoint>                   
    </flow>
</mule>
----

pop3s连接器具有tls上定义的客户端和服务器密钥库信息。内置变压器在declared声明并获取电子邮件附件列表。然后将此变压器应用于❸上的入站端点。然后我们在❹上定义一个列表列表 - 消息分离器 - 路由器，它遍历所有的电子邮件附件。接下来我们定义一个文件出站端点，该端点将附件写入'./received'目录，并在文件名上加上日期戳。 ❻定义一个简单的groovy表达式，它获取附件的inputStream来写入文件。

== 配置参考

=== 连接器

POP3连接器支持所有 link:/mule-user-guide/v/3.7/configuring-a-transport[常见的连接器属性和属性]和以下附加属性：

[%header,cols="30a,70a"]
|===
| {属性{1}}说明
| backupEnabled  |是否将副本保存到备份文件夹。

*Default*：False +
*Required*：不
| backupFolder  |消息在读取后移动的文件夹。

*Default*：无+
*Required*：不
| checkFrequency  |到服务器的轮询连接之间的周期（毫秒）。

*Default*：60000 +
*Required*：是的
| mailboxFolder  |用于检查电子邮件的远程文件夹。

*Default*：INBOX +
*Required*：不
| deleteReadMessages  |是否在服务器下载消息时删除消息。如果设置为false，则将消息设置为`defaultProcessMessageAction`属性值。

*Default*：true +
*Required*：不
| moveToFolder  |远程文件夹将邮件移动到已读取的位置。建议在使用此选项时将'deleteReadMessages'设置为false。

当使用GMail等公共电子邮件服务时，这非常有用，因为删除标记邮件不起作用。相反，请设置@ moveToFolder = GMail / Trash。

*Default*：无+
*Required*：不
| defaultProcessMessageAction  |如果deleteReadMessages属性设置为false，则执行该操作。有效值包括：答案，删除，草稿，标记，最近，看到，用户和无。

*Default*：SEEN +
*Required*：不
|===

对于安全版本，还需要以下元素：

[%header,cols="30a,70a"]
|===
|元素 |说明
| tls-client  |使用以下属性配置客户端密钥存储：

* 路径：相对于当前类路径和文件系统（如果可能的话）的位置，包含用于标识的公钥和私钥的密钥库
*  storePassword：用于保护密钥库的密码
*  class：使用的密钥库类型

| tls-trust-store  |配置信任存储。属性是：

* 路径：相对于当前类路径和文件系统（如果可能）解析包含可信服务器的公用证书的信任存储的位置。
*  storePassword：用于保护信任存储的密码。

|===

例如：

[source, xml, linenums]
----
<?xml version="1.0" encoding="UTF-8"?>
<mule xmlns="http://www.mulesoft.org/schema/mule/core"
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       xmlns:spring="http://www.springframework.org/schema/beans"
       xmlns:pop3="http://www.mulesoft.org/schema/mule/pop3"
       xsi:schemaLocation="
       http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans-current.xsd
       http://www.mulesoft.org/schema/mule/core http://www.mulesoft.org/schema/mule/core/current/mule.xsd
       http://www.mulesoft.org/schema/mule/pop3 http://www.mulesoft.org/schema/mule/pop3/current/mule-pop3.xsd">
 
     <pop3:connector name="pop3Connector" backupEnabled="true" backupFolder="newBackup" checkFrequency="1234"
                     mailboxFolder="newMailbox" deleteReadMessages="false"/> 
...
----

安全版本：

[source, xml, linenums]
----
<?xml version="1.0" encoding="UTF-8"?>
<mule xmlns="http://www.mulesoft.org/schema/mule/core"
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       xmlns:spring="http://www.springframework.org/schema/beans"
       xmlns:pop3s="http://www.mulesoft.org/schema/mule/pop3s"
       xsi:schemaLocation="
       http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans-current.xsd
       http://www.mulesoft.org/schema/mule/core http://www.mulesoft.org/schema/mule/core/current/mule.xsd
       http://www.mulesoft.org/schema/mule/pop3s http://www.mulesoft.org/schema/mule/pop3s/current/mule-pop3s.xsd">

<pop3s:connector name="pop3sConnector">
  <pop3s:tls-client path="clientKeystore" storePassword="mulepassword" />
  <pop3s:tls-trust-store path="greenmail-truststore" storePassword="password" />
</pop3s:connector>
<flow name="relay">
      <pop3s:inbound-endpoint user="bob" password="password" host="mailServer"/> ❷
...
----

== 端点

POP3和POP3S端点包含有关连接到POP3邮箱的详细信息。您 link:/mule-user-guide/v/3.7/endpoint-configuration-reference[配置端点]与其他运输方式一样，具有以下附加属性：

* 用户：邮箱所有者的用户名
* 密码：用户的密码
* 主机：POP3服务器的IP地址，例如www.mulesoft.com，localhost或127.0.0.1
* 端口：POP3服务器的端口号。如果未为POP3S连接器设置，则默认端口为995。

例如：

[source, xml]
----
<pop3:inbound-endpoint user="bob" password="foo" host="pop.gmail.com" checkFrequency="3000" />
----

或者如果使用POP3S连接器：

[source, xml]
----
<pop3s:inbound-endpoint user="bob" password="foo" host="pop.gmail.com" checkFrequency="3000" />
----

您还可以使用URI语法定义端点：

[source, xml]
----
<pop3s:inbound-endpoint address="pop3://bob:foo@pop.gmail.com" checkFrequency="3000" />
----

这将使用密码{{}}（使用POP3S端点的默认端口995）登录`pop.gmail.com`中的`bob`邮箱。

有关变形金刚的更多信息，请参阅电子邮件传输参考中的 link:/mule-user-guide/v/3.7/email-transport-reference[变形金刚]部分。

有关过滤器的更多信息，请参阅电子邮件传输参考中的 link:/mule-user-guide/v/3.7/email-transport-reference[过滤器]部分。

== 交换模式/传输特性

请参阅 link:/mule-user-guide/v/3.7/transports-reference[传输矩阵]。

== 架构参考

您可以查看POP3电子邮件传输 link:http://www.mulesoft.org/docs/site/current3/schemadocs/namespaces/http_www_mulesoft_org_schema_mule_pop3/namespace-overview.html[这里]的完整模式。安全版本是 link:http://www.mulesoft.org/docs/site/current3/schemadocs/namespaces/http_www_mulesoft_org_schema_mule_pop3s/namespace-overview.html[这里]。

==  Java API参考

http://www.mulesoft.org/docs/site/3.7.0/apidocs/org/mule/transport/email/package-summary.html[Javadoc为POP3运输]

==  Maven模块

电子邮件传输由mule-transport-email模块执行。您可以在传输/电子邮件中找到电子邮件传输的来源。

如果您使用maven构建您的应用程序，请使用以下依赖项片段将电子邮件传输包含在您的项目中：

[source, xml, linenums]
----
<dependency>
  <groupId>org.mule.transports</groupId>
  <artifactId>mule-transport-email</artifactId>
</dependency>
----

== 限制

有关这些限制的更多信息，请参阅电子邮件传输参考中的 link:/mule-user-guide/v/3.7/email-transport-reference[限制]部分。

